--- a/4_overall_methodology/0_index.tex
+++ b/4_overall_methodology/0_index.tex
@@ -33,7 +33,7 @@ En el VLE por ejemplo, los estudiantes pasan a diario por sus páginas. Por un l
 
 % Revisar párrafo anterior sobre el contexto de learning analytics
 
-\section{Método: design-based assessment (DBA)}
+\section{Método: design-based assessment (DBA)} \label{cha:met-sec:dba}
 
 \subsection{Contexto}
 
